// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GasToken returns canonical protocol contract 1`] = `
{
  "address": AztecAddress {
    "asBigInt": 10518537853519909204957666322334442672584410385979059968848104222965977783517n,
    "asBuffer": {
      "data": [
        23,
        65,
        72,
        13,
        6,
        111,
        233,
        124,
        40,
        151,
        239,
        36,
        144,
        234,
        34,
        48,
        149,
        204,
        24,
        108,
        103,
        5,
        224,
        47,
        181,
        106,
        33,
        6,
        27,
        203,
        28,
        221,
      ],
      "type": "Buffer",
    },
  },
  "instance": {
    "address": AztecAddress {
      "asBigInt": 10518537853519909204957666322334442672584410385979059968848104222965977783517n,
      "asBuffer": {
        "data": [
          23,
          65,
          72,
          13,
          6,
          111,
          233,
          124,
          40,
          151,
          239,
          36,
          144,
          234,
          34,
          48,
          149,
          204,
          24,
          108,
          103,
          5,
          224,
          47,
          181,
          106,
          33,
          6,
          27,
          203,
          28,
          221,
        ],
        "type": "Buffer",
      },
    },
    "contractClassId": Fr {
      "asBigInt": 1081288800764539456992515725727545013194509212534089179832398000157107722146n,
      "asBuffer": {
        "data": [
          2,
          99,
          252,
          222,
          180,
          100,
          28,
          30,
          214,
          18,
          131,
          72,
          114,
          250,
          186,
          113,
          101,
          40,
          14,
          133,
          193,
          94,
          154,
          6,
          203,
          103,
          189,
          107,
          88,
          212,
          151,
          162,
        ],
        "type": "Buffer",
      },
    },
    "initializationHash": Fr {
      "asBigInt": 5411687428194306823799197943510367074755080310726877398642044502900791103391n,
      "asBuffer": {
        "data": [
          11,
          246,
          232,
          18,
          241,
          75,
          176,
          41,
          247,
          203,
          156,
          141,
          168,
          54,
          125,
          217,
          124,
          6,
          142,
          120,
          141,
          79,
          33,
          0,
          127,
          217,
          112,
          20,
          235,
          168,
          207,
          159,
        ],
        "type": "Buffer",
      },
    },
    "portalContractAddress": EthAddress {
      "buffer": {
        "data": [
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
        ],
        "type": "Buffer",
      },
    },
    "publicKeysHash": Fr {
      "asBigInt": 17954372136461894568820199868962143715279932924957662285438325406238856880109n,
      "asBuffer": {
        "data": [
          39,
          177,
          208,
          131,
          154,
          91,
          35,
          186,
          241,
          42,
          141,
          25,
          91,
          24,
          172,
          40,
          143,
          207,
          64,
          26,
          251,
          47,
          112,
          184,
          164,
          181,
          41,
          237,
          229,
          250,
          159,
          237,
        ],
        "type": "Buffer",
      },
    },
    "salt": Fr {
      "asBigInt": 1n,
      "asBuffer": {
        "data": [
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          1,
        ],
        "type": "Buffer",
      },
    },
    "version": 1,
  },
}
`;

exports[`GasToken returns canonical protocol contract 2`] = `
{
  "artifactHash": Fr {
    "asBigInt": 3363571886208995000060653132822906490593381833217164785427349714321114865759n,
    "asBuffer": {
      "data": [
        7,
        111,
        182,
        215,
        73,
        59,
        7,
        90,
        136,
        14,
        238,
        217,
        15,
        236,
        124,
        76,
        1,
        224,
        162,
        77,
        68,
        37,
        34,
        68,
        158,
        77,
        86,
        194,
        99,
        87,
        32,
        95,
      ],
      "type": "Buffer",
    },
  },
  "id": Fr {
    "asBigInt": 1081288800764539456992515725727545013194509212534089179832398000157107722146n,
    "asBuffer": {
      "data": [
        2,
        99,
        252,
        222,
        180,
        100,
        28,
        30,
        214,
        18,
        131,
        72,
        114,
        250,
        186,
        113,
        101,
        40,
        14,
        133,
        193,
        94,
        154,
        6,
        203,
        103,
        189,
        107,
        88,
        212,
        151,
        162,
      ],
      "type": "Buffer",
    },
  },
  "privateFunctions": [
    {
      "isInternal": false,
      "selector": FunctionSelector {
        "value": 2432309179,
      },
      "vkHash": Fr {
        "asBigInt": 0n,
        "asBuffer": {
          "data": [
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
          ],
          "type": "Buffer",
        },
      },
    },
  ],
  "privateFunctionsRoot": Fr {
    "asBigInt": 8909521279374546913798331365196924937704969493731099782202223186665436350504n,
    "asBuffer": {
      "data": [
        19,
        178,
        156,
        63,
        74,
        150,
        235,
        20,
        213,
        211,
        83,
        154,
        99,
        8,
        255,
        151,
        54,
        173,
        93,
        103,
        227,
        246,
        31,
        251,
        183,
        218,
        144,
        142,
        20,
        152,
        8,
        40,
      ],
      "type": "Buffer",
    },
  },
  "publicBytecodeCommitment": Fr {
    "asBigInt": 11070879835458647599904872869544251898416073411427356569372185618409843299916n,
    "asBuffer": {
      "data": [
        24,
        121,
        229,
        91,
        202,
        195,
        128,
        170,
        238,
        201,
        145,
        159,
        246,
        6,
        245,
        115,
        211,
        60,
        229,
        130,
        225,
        76,
        234,
        38,
        46,
        15,
        108,
        202,
        129,
        107,
        150,
        76,
      ],
      "type": "Buffer",
    },
  },
  "version": 1,
}
`;

exports[`GasToken returns canonical protocol contract 3`] = `
[
  {
    "isInternal": false,
    "selector": FunctionSelector {
      "value": 190347739,
    },
  },
  {
    "isInternal": false,
    "selector": FunctionSelector {
      "value": 1776307709,
    },
  },
  {
    "isInternal": false,
    "selector": FunctionSelector {
      "value": 1811750235,
    },
  },
  {
    "isInternal": false,
    "selector": FunctionSelector {
      "value": 3422298534,
    },
  },
]
`;
